--- a/notebooks/Reporting.ipynb
+++ b/notebooks/Reporting.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "id": "407c582e",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "id": "0f6e8e84",
    "metadata": {},
    "outputs": [
@@ -90,9 +90,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Successfully fetched 113 records from Supabase\n",
+      "✓ Successfully fetched 114 records from Supabase\n",
       "\n",
-      "Dataset Shape: (113, 23)\n",
+      "Dataset Shape: (114, 23)\n",
       "Columns: ['property_id', 'report_reference', 'client_name', 'valuer_name', 'inspection_date', 'valuation_date', 'location_county', 'location_description', 'location_coordinates', 'plot_area_hectares', 'plot_area_acres', 'land_use', 'plot_shape', 'soil_type', 'gradient', 'tenure_type', 'registered_proprietor', 'market_value_amount', 'metadata', 'created_at', 'land_reg_number', 'encumbrance_category', 'id']\n"
      ]
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "id": "de518961",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "id": "bb206a63",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "id": "2d37111d",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "cd6a79a4",
    "metadata": {},
    "outputs": [
@@ -513,18 +513,17 @@
       "================================================================================\n",
       "AI-GENERATED REPORT PREVIEW (First 500 characters):\n",
       "================================================================================\n",
-      "**TO:** NW Realite Stakeholders\n",
-      "**FROM:** Samuel Wanyua, Data Scientist\n",
-      "**DATE:** 2nd December 2025\n",
-      "**SUBJECT:** Comprehensive Property Valuation Portfolio Performance Report\n",
+      "**NW Realite Property Valuation Report**\n",
+      "**Date: 2nd December 2025**\n",
+      "**Prepared by: Samuel Wanyua, Data Scientist**\n",
       "\n",
       "---\n",
       "\n",
-      "# PAGE 1: EXECUTIVE SUMMARY\n",
+      "**EXECUTIVE SUMMARY**\n",
       "\n",
-      "## 1. Portfolio Overview\n",
+      "This report provides a comprehensive analysis of NW Realite's property valuation portfolio as of 2nd December 2025. It highlights key performance indicators, growth trends, client and geographic insights, risk assessments, and strategic recommendations to inform stakeholders on the portfolio's current state and future opportunities.\n",
       "\n",
-      "NW Realite's property valuation portfolio currently comprises 113 properties, accumulating a substantial total market value of KShs 12.27 billion as of the reporting date. This represents a significant asset base under our assessment. The average property value st...\n"
+      "**1. Portfolio Over...\n"
      ]
     }
    ],
@@ -590,7 +589,7 @@
     "\n",
     "    prompt = f\"\"\"\n",
     "You are a Data Scientist (Samuel Wanyua) at NW Realite. Based on the comprehensive data summary below, \n",
-    "create a detailed 2-page executive report for stakeholders. (Date is 2nd December 2025)\n",
+    "create a detailed 2-page executive report for stakeholders (Don't include TO, FROM, SUBJECT ... details, INSTEAD REFERENCE REPORT IS DONE BY Samuel Wanyua). (Date is 2nd December 2025)\n",
     "\n",
     "{metrics_summary}\n",
     "\n",
@@ -653,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "id": "21dac93e",
    "metadata": {},
    "outputs": [],
@@ -757,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "id": "5f413d23",
    "metadata": {},
    "outputs": [
