--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0761df56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ All libraries imported\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -32,12 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b4281297",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Configuration loaded\n",
+      "  PDF Directory: Z:\\Risper M\\ALL VALUATION REPORTS\n",
+      "  Gemini Model: models/gemini-2.5-flash\n"
+     ]
+    }
+   ],
    "source": [
-    "PDF_DIR = r\"C:\\Users\\samue\\Documents\\Year 2025\\Year 2025\\Additional\"\n",
+    "PDF_DIR = r\"Z:\\Risper M\\ALL VALUATION REPORTS\"\n",
     "OUTPUT_DIR = \"./additional_2025v1\"\n",
     "ERROR_LOG_DIR = \"./errors\"\n",
     "\n",
@@ -70,10 +88,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e89e9076",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\samue\\Documents\\Work\\Code\\valuation_data_miner\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```json\n",
+      "{\"test\": 123}\n",
+      "```\n"
+     ]
+    }
+   ],
    "source": [
     "import google.generativeai as genai\n",
     "genai.configure(api_key=GEMINI_API_KEY)\n",
@@ -91,10 +127,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5968f47b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "models/embedding-gecko-001\n",
+      "models/gemini-2.5-pro-preview-03-25\n",
+      "models/gemini-2.5-flash\n",
+      "models/gemini-2.5-pro-preview-05-06\n",
+      "models/gemini-2.5-pro-preview-06-05\n",
+      "models/gemini-2.5-pro\n",
+      "models/gemini-2.0-flash-exp\n",
+      "models/gemini-2.0-flash\n",
+      "models/gemini-2.0-flash-001\n",
+      "models/gemini-2.0-flash-exp-image-generation\n",
+      "models/gemini-2.0-flash-lite-001\n",
+      "models/gemini-2.0-flash-lite\n",
+      "models/gemini-2.0-flash-lite-preview-02-05\n",
+      "models/gemini-2.0-flash-lite-preview\n",
+      "models/gemini-2.0-pro-exp\n",
+      "models/gemini-2.0-pro-exp-02-05\n",
+      "models/gemini-exp-1206\n",
+      "models/gemini-2.0-flash-thinking-exp-01-21\n",
+      "models/gemini-2.0-flash-thinking-exp\n",
+      "models/gemini-2.0-flash-thinking-exp-1219\n",
+      "models/gemini-2.5-flash-preview-tts\n",
+      "models/gemini-2.5-pro-preview-tts\n",
+      "models/learnlm-2.0-flash-experimental\n",
+      "models/gemma-3-1b-it\n",
+      "models/gemma-3-4b-it\n",
+      "models/gemma-3-12b-it\n",
+      "models/gemma-3-27b-it\n",
+      "models/gemma-3n-e4b-it\n",
+      "models/gemma-3n-e2b-it\n",
+      "models/gemini-flash-latest\n",
+      "models/gemini-flash-lite-latest\n",
+      "models/gemini-pro-latest\n",
+      "models/gemini-2.5-flash-lite\n",
+      "models/gemini-2.5-flash-image-preview\n",
+      "models/gemini-2.5-flash-image\n",
+      "models/gemini-2.5-flash-preview-09-2025\n",
+      "models/gemini-2.5-flash-lite-preview-09-2025\n",
+      "models/gemini-3-pro-preview\n",
+      "models/gemini-3-pro-image-preview\n",
+      "models/nano-banana-pro-preview\n",
+      "models/gemini-robotics-er-1.5-preview\n",
+      "models/gemini-2.5-computer-use-preview-10-2025\n",
+      "models/embedding-001\n",
+      "models/text-embedding-004\n",
+      "models/gemini-embedding-exp-03-07\n",
+      "models/gemini-embedding-exp\n",
+      "models/gemini-embedding-001\n",
+      "models/aqa\n",
+      "models/imagen-4.0-generate-preview-06-06\n",
+      "models/imagen-4.0-ultra-generate-preview-06-06\n",
+      "models/imagen-4.0-generate-001\n",
+      "models/imagen-4.0-ultra-generate-001\n",
+      "models/imagen-4.0-fast-generate-001\n",
+      "models/veo-2.0-generate-001\n",
+      "models/veo-3.0-generate-001\n",
+      "models/veo-3.0-fast-generate-001\n",
+      "models/veo-3.1-generate-preview\n",
+      "models/veo-3.1-fast-generate-preview\n",
+      "models/gemini-2.0-flash-live-001\n",
+      "models/gemini-live-2.5-flash-preview\n",
+      "models/gemini-2.5-flash-live-preview\n",
+      "models/gemini-2.5-flash-native-audio-latest\n",
+      "models/gemini-2.5-flash-native-audio-preview-09-2025\n"
+     ]
+    }
+   ],
    "source": [
     "import google.generativeai as genai\n",
     "genai.configure(api_key=GEMINI_API_KEY)\n",
@@ -106,10 +212,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9d0f0618",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Updated JSON schema defined\n"
+     ]
+    }
+   ],
    "source": [
     "VALUATION_SCHEMA = {\n",
     "    \"type\": \"object\",\n",
@@ -184,10 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9e62af67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Validation function defined\n"
+     ]
+    }
+   ],
    "source": [
     "def validate_extracted_data(data: Dict) -> Tuple[bool, Optional[str]]:\n",
     "    \"\"\"Validate extracted data against schema\"\"\"\n",
@@ -202,10 +324,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3ee9a439",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Supabase client initialized\n"
+     ]
+    }
+   ],
    "source": [
     "def init_supabase() -> Optional[Client]:\n",
     "    \"\"\"Initialize Supabase client\"\"\"\n",
@@ -226,12 +356,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "06a1d538",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SUPABASE_TABLE = \"additional_2025v1\"   \n",
+    "SUPABASE_TABLE = \"valuations_2025_clean_v2_backup\"   \n",
     "\n",
     "\n",
     "def sanitize_dates_for_supabase(data: dict) -> dict:\n",
@@ -296,10 +426,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2f73ad33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Updated OCR function defined\n"
+     ]
+    }
+   ],
    "source": [
     "def process_scanned_pdf_with_ocr(pdf_path: str, dpi: int = 150) -> str:\n",
     "    \"\"\"Convert scanned PDF to text using Tesseract OCR safely (memory-friendly).\"\"\"\n",
@@ -360,10 +498,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fd186301",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ PDF extraction with fallback defined\n"
+     ]
+    }
+   ],
    "source": [
     "def process_pdf_with_fallback(pdf_path: str) -> str:\n",
     "    \"\"\"Try multiple extraction methods\"\"\"\n",
@@ -398,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "72030385",
    "metadata": {},
    "outputs": [],
@@ -617,10 +763,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5f11142a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Complete pipeline defined with full metadata\n"
+     ]
+    }
+   ],
    "source": [
     "def process_single_pdf_complete(pdf_path: str, filename: str) -> dict:\n",
     "    \"\"\"Complete pipeline: OCR → Gemini → Validate → Save\"\"\"\n",
@@ -727,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2157cff9",
    "metadata": {},
    "outputs": [],
@@ -853,10 +1007,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c6e1bdfd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "======================================================================\n",
+      "\n",
+      "🧪 TESTING: LR NO 27903-29 PIPELINE AREA EMBAKASI NAIROBI COUNTY.pdf\n",
+      "\n",
+      "\n",
+      "  📄 Stage 1: OCR\n",
+      "    → Trying pdfplumber...\n",
+      "    → Only 0 chars, trying OCR...\n",
+      "    → Converting PDF to images at 150 dpi...\n",
+      "    → Running OCR on 22 pages...\n",
+      "      → Page 1/22... ✓ 1151 chars\n",
+      "      → Page 2/22... ✓ 2401 chars\n",
+      "      → Page 3/22... ✓ 273 chars\n",
+      "      → Page 4/22... ✓ 178 chars\n",
+      "      → Page 5/22... ✓ 884 chars\n",
+      "      → Page 6/22... ✓ 1435 chars\n",
+      "      → Page 7/22... ✓ 1399 chars\n",
+      "      → Page 8/22... ✓ 1023 chars\n",
+      "      → Page 9/22... ✓ 1961 chars\n",
+      "      → Page 10/22... ✓ 1901 chars\n",
+      "      → Page 11/22... ✓ 1533 chars\n",
+      "      → Page 12/22... ✓ 735 chars\n",
+      "      → Page 13/22... ✓ 1491 chars\n",
+      "      → Page 14/22... ✓ 557 chars\n",
+      "      → Page 15/22... ✓ 958 chars\n",
+      "      → Page 16/22... ✓ 790 chars\n",
+      "      → Page 17/22... (empty)\n",
+      "      → Page 18/22... ✓ 11 chars\n",
+      "      → Page 19/22... (empty)\n",
+      "      → Page 20/22... (empty)\n",
+      "      → Page 21/22... ✓ 18 chars\n",
+      "      → Page 22/22... ✓ 44 chars\n",
+      "    → OCR complete: 19074 characters\n",
+      "  ✓ 19074 chars in 68.9s\n",
+      "\n",
+      "  🤖 Stage 2: Gemini\n",
+      "  ✓ Extracted in 21.2s\n",
+      "\n",
+      "  ✅ Stage 3: Validation\n",
+      "  ✓ Valid\n",
+      "\n",
+      "  💾 Stage 4: Save\n",
+      "  ✓ Saved to LR NO 27903-29 PIPELINE AREA EMBAKASI NAIROBI COUNTY.json\n",
+      "  ⚠ Supabase: Supabase upload failed: {'message': \"Could not fin\n",
+      "\n",
+      "✅ TEST PASSED!\n",
+      "\n",
+      "Preview:\n",
+      "{\n",
+      "  \"property_id\": \"LR NO 27903-29 PIPELINE AREA EMBAKASI NAIROBI COUNTY\",\n",
+      "  \"report_reference\": \"SOO/DOO/5390/1/25\",\n",
+      "  \"title_number\": \"\",\n",
+      "  \"lr_number\": \"27903/29 (N 83 FOLIO 64 FILE 25310)\",\n",
+      "  \"ir_number\": \"\",\n",
+      "  \"client_name\": \"The Co-operative Bank of Kenya Limited\",\n",
+      "  \"valuer_name\": \"NW Realite Limited\",\n",
+      "  \"inspection_date\": \"\",\n",
+      "  \"valuation_date\": \"\",\n",
+      "  \"location_county\": \"Nairobi County\",\n",
+      "  \"location_description\": \"The property is located within Pipeline Ward within Embakasi South Constituency in Nairobi County. It lies adjacent to The Home Point Lounge, approximately 900 meters to the Northeast of Southfield Mall and 165 meters to the Northeast of Kenya Builders and Conctete Company Limited within Pipeline Area of Embakasi in Nairobi County.\",\n",
+      "  \"location_coordinates\": \"1\\u00b019'14.7\\\"S 36\\u00b053'35.5\\\"E\",\n",
+      "  \"plot_area_hectares\": 0.0287,\n",
+      "  \"plot_area_acres\": 0.0709,\n",
+      "  \"land_use\": \"Residential Property\",\n",
+      "  \"plot_shape\": \"rectangular\",\n",
+      "  \"soil_type\": \"mixed soils\",\n",
+      "  \"gradient\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'filename': 'LR NO 27903-29 PIPELINE AREA EMBAKASI NAIROBI COUNTY.pdf',\n",
+       " 'success': True,\n",
+       " 'stage': 'supabase',\n",
+       " 'error': None,\n",
+       " 'data': {'property_id': 'LR NO 27903-29 PIPELINE AREA EMBAKASI NAIROBI COUNTY',\n",
+       "  'report_reference': 'SOO/DOO/5390/1/25',\n",
+       "  'title_number': '',\n",
+       "  'lr_number': '27903/29 (N 83 FOLIO 64 FILE 25310)',\n",
+       "  'ir_number': '',\n",
+       "  'client_name': 'The Co-operative Bank of Kenya Limited',\n",
+       "  'valuer_name': 'NW Realite Limited',\n",
+       "  'inspection_date': '',\n",
+       "  'valuation_date': '',\n",
+       "  'location_county': 'Nairobi County',\n",
+       "  'location_description': 'The property is located within Pipeline Ward within Embakasi South Constituency in Nairobi County. It lies adjacent to The Home Point Lounge, approximately 900 meters to the Northeast of Southfield Mall and 165 meters to the Northeast of Kenya Builders and Conctete Company Limited within Pipeline Area of Embakasi in Nairobi County.',\n",
+       "  'location_coordinates': '1°19\\'14.7\"S 36°53\\'35.5\"E',\n",
+       "  'plot_area_hectares': 0.0287,\n",
+       "  'plot_area_acres': 0.0709,\n",
+       "  'land_use': 'Residential Property',\n",
+       "  'plot_shape': 'rectangular',\n",
+       "  'soil_type': 'mixed soils',\n",
+       "  'gradient': 'gentle',\n",
+       "  'drainage': '',\n",
+       "  'vegetation': '',\n",
+       "  'tenure_type': 'Freehold',\n",
+       "  'registered_proprietor': 'Catherine Benard Chiuri',\n",
+       "  'ownership_type': '',\n",
+       "  'encumbrances': 'Charge dated 3rd April 2018 in favour of Equity Bank (Kenya) Limited to secure a sum of KShs. 13,300,000.00.',\n",
+       "  'market_value_amount': 60000000.0,\n",
+       "  'market_value_currency': 'KShs.',\n",
+       "  'metadata': {'source_file': 'LR NO 27903-29 PIPELINE AREA EMBAKASI NAIROBI COUNTY.pdf',\n",
+       "   'file_size_kb': 11674.02,\n",
+       "   'processing_time_seconds': 90.12,\n",
+       "   'ocr_used': True,\n",
+       "   'pages_processed': 19,\n",
+       "   'model_name': 'models/gemini-2.5-flash',\n",
+       "   'timestamp': '2025-12-02T12:05:06.993620'}},\n",
+       " 'timing': {'ocr': 68.85298895835876,\n",
+       "  'gemini': 21.217646837234497,\n",
+       "  'total': 95.83046960830688}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def test_single_pdf():\n",
     "    \"\"\"Test with first PDF\"\"\"\n",
