Update report layout

--- a/notebooks/Reporting.ipynb
+++ b/notebooks/Reporting.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "id": "407c582e",
    "metadata": {},
    "outputs": [
@@ -56,8 +56,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Configuration loaded for NW Realite\n",
-      " Report date: December 02, 2025\n"
+      " Configuration loaded for NW Realite - Property Valuation Analysis Report\n",
+      " Report date: December 03, 2025\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
     "genai.configure(api_key=GEMINI_API_KEY)\n",
     "\n",
     "# Report Configuration\n",
-    "COMPANY_NAME = \"NW Realite\"\n",
+    "COMPANY_NAME = \"NW Realite - Property Valuation Analysis Report\"\n",
     "REPORT_DATE = datetime.now().strftime(\"%B %d, %Y\")\n",
     "TABLE_NAME = \"valuations_2025_clean_v2\"\n",
     "\n",
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "id": "2d37111d",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
     "    sns.set_palette(\"Set2\")\n",
     "    \n",
     "    # Create figure with 6 subplots\n",
-    "    fig, axes = plt.subplots(2, 3, figsize=(24, 10))\n",
+    "    fig, axes = plt.subplots(2, 3, figsize=(18, 10))\n",
     "    fig.suptitle('NW Realite - Property Valuation Dashboard', fontsize=16, fontweight='bold', y=0.995)\n",
     "    \n",
     "    # 1. Top 10 Counties by Value\n",
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "id": "cd6a79a4",
    "metadata": {},
    "outputs": [
@@ -513,33 +513,22 @@
       "================================================================================\n",
       "AI-GENERATED REPORT PREVIEW (First 500 characters):\n",
       "================================================================================\n",
-      "**NW Realite Property Valuation Report**\n",
-      "**Date: 2nd December 2025**\n",
-      "**Prepared by: Samuel Wanyua, Data Scientist**\n",
+      "Date: 2nd December 2025\n",
       "\n",
-      "---\n",
+      "EXECUTIVE SUMMARY\n",
       "\n",
-      "**EXECUTIVE SUMMARY**\n",
-      "\n",
-      "This report provides a comprehensive analysis of NW Realite's property valuation portfolio as of 2nd December 2025. It highlights key performance indicators, growth trends, client and geographic insights, risk assessments, and strategic recommendations to inform stakeholders on the portfolio's current state and future opportunities.\n",
-      "\n",
-      "**1. Portfolio Over...\n"
+      "This report provides a comprehensive overview of NW Realite's property valuation portfolio, analyzing key performance indicators, growth trends, client and geographic distribution, and inherent risks. The portfolio demonstrates robust value growth, currently standing at KShs 12.33 billion across 114 properties. While experiencing significant month-on-month value growth, the portfolio exhibits high concentration in both client segments and geographic lo...\n"
      ]
     }
    ],
    "source": [
-    "import google.generativeai as genai\n",
-    "import json\n",
-    "import os\n",
-    "\n",
-    "\n",
     "def generate_ai_report(metrics, df):\n",
     "    \"\"\"Use Gemini 2.5 Flash to generate comprehensive report\"\"\"\n",
-    "\n",
-    "    # Initialize Gemini model properly\n",
+    "    \n",
+    "    # Initialize Gemini model\n",
     "    genai.configure(api_key=os.getenv(\"GEMINI_API_KEY\"))\n",
     "    model = genai.GenerativeModel(\"gemini-2.5-flash\")\n",
-    "\n",
+    "    \n",
     "    # Prepare metrics summary for AI\n",
     "    metrics_summary = f\"\"\"\n",
     "# PROPERTY VALUATION DATA SUMMARY\n",
@@ -585,11 +574,20 @@
     "- Number of Valuers: {metrics['performance']['num_valuers']}\n",
     "- Most Active Valuer: {metrics['performance']['most_active_valuer']}\n",
     "- Monthly Avg Inspections: {metrics['performance']['monthly_avg_inspections']:.1f}\n",
-    "    \"\"\"\n",
-    "\n",
+    "\"\"\"\n",
+    "    \n",
     "    prompt = f\"\"\"\n",
-    "You are a Data Scientist (Samuel Wanyua) at NW Realite. Based on the comprehensive data summary below, \n",
-    "create a detailed 2-page executive report for stakeholders (Don't include TO, FROM, SUBJECT ... details, INSTEAD REFERENCE REPORT IS DONE BY Samuel Wanyua). (Date is 2nd December 2025)\n",
+    "You are Samuel Wanyua, a Data Scientist at NW Realite. Based on the comprehensive data summary below, \n",
+    "create a detailed 2-page executive report for stakeholders. \n",
+    "\n",
+    "IMPORTANT FORMATTING INSTRUCTIONS:\n",
+    "- Do NOT use markdown asterisks (*) for emphasis\n",
+    "- Use clear section headers with numbers\n",
+    "- Write in plain text paragraphs\n",
+    "- For bullet points, use simple dashes (-)\n",
+    "- Keep the tone professional and data-driven\n",
+    "- Date: 2nd December 2025\n",
+    "- Reference that the report is prepared by Samuel Wanyua, Data Scientist\n",
     "\n",
     "{metrics_summary}\n",
     "\n",
@@ -597,42 +595,48 @@
     "\n",
     "EXECUTIVE SUMMARY\n",
     "\n",
-    " 1. Portfolio Overview (2-3 paragraphs)\n",
-    "Provide a high-level summary of the portfolio including size, total value, and key characteristics.\n",
+    "1. Portfolio Overview\n",
+    "Provide a high-level summary in 2-3 paragraphs covering portfolio size, total value, and key characteristics.\n",
     "\n",
-    " 2. Key Performance Indicators (bullet points)\n",
-    "Highlight the most critical metrics in an easy-to-scan format.\n",
+    "2. Key Performance Indicators\n",
+    "List the most critical metrics in bullet points (use simple dashes).\n",
     "\n",
-    " 3. Growth & Trends Analysis (1-2 paragraphs)\n",
-    "Analyze growth trends, seasonal patterns, and inspection efficiency.\n",
+    "3. Growth & Trends Analysis\n",
+    "Analyze growth trends, seasonal patterns, and inspection efficiency in 1-2 paragraphs.\n",
     "\n",
-    " 4. Client & Geographic Insights (1-2 paragraphs)\n",
-    "Discuss client concentration, diversification, and geographic distribution.\n",
+    "4. Client & Geographic Insights\n",
+    "Discuss client concentration, diversification, and geographic distribution in 1-2 paragraphs.\n",
     "\n",
-    "# DETAILED ANALYSIS & RECOMMENDATIONS\n",
+    "DETAILED ANALYSIS & RECOMMENDATIONS\n",
     "\n",
-    " 5. Risk Assessment (2 paragraphs)\n",
-    "Analyze encumbrance levels, value at risk, and portfolio risk profile.\n",
+    "5. Risk Assessment\n",
+    "Analyze encumbrance levels, value at risk, and portfolio risk profile in 2 paragraphs.\n",
     "\n",
-    " 6. Land Use & Value Analysis (1-2 paragraphs)\n",
-    "Discuss land use distribution, value per acre trends, and property characteristics.\n",
+    "6. Land Use & Value Analysis\n",
+    "Discuss land use distribution, value per acre trends, and property characteristics in 1-2 paragraphs.\n",
     "\n",
-    " 7. Strategic Recommendations (5–7 bullet points)\n",
-    "Provide actionable recommendations for portfolio management, risk mitigation, and growth opportunities.\n",
+    "7. Strategic Recommendations\n",
+    "Provide 5-7 actionable recommendations as numbered points.\n",
     "\n",
-    " 8. Key Takeaways (3–5 bullet points)\n",
-    "Summarize the most important insights for quick reference.\n",
+    "8. Key Takeaways\n",
+    "Summarize 3-5 most important insights as numbered points.\n",
     "\n",
-    "Use professional language, be data-driven, and provide specific, actionable insights. \n",
-    "Format using clear headers and maintain a formal tone appropriate for stakeholder presentation.\n",
+    "CRITICAL: Do not use any markdown formatting (no *, **, #, etc.). Write in clean, professional prose with clear section numbers and simple bullet points using dashes.\n",
     "\"\"\"\n",
-    "\n",
+    "    \n",
     "    try:\n",
     "        response = model.generate_content(prompt)\n",
     "        report_text = response.text\n",
+    "        \n",
+    "        # Clean up any remaining markdown artifacts\n",
+    "        report_text = report_text.replace('**', '')\n",
+    "        report_text = report_text.replace('*', '')\n",
+    "        report_text = report_text.replace('##', '')\n",
+    "        report_text = report_text.replace('#', '')\n",
+    "        \n",
     "        print(\"✓ AI report generated successfully\")\n",
     "        return report_text\n",
-    "\n",
+    "        \n",
     "    except Exception as e:\n",
     "        print(f\"✗ Error generating AI report: {e}\")\n",
     "        return None\n",
@@ -647,19 +651,27 @@
     "    print(\"=\"*80)\n",
     "    print(ai_report[:500] + \"...\")\n",
     "else:\n",
-    "    print(\"Failed to generate AI report. Check your Gemini API key.\")\n"
+    "    print(\"Failed to generate AI report. Check your Gemini API key.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "id": "21dac93e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ PDF report created successfully: nw_realite_report.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "def create_pdf_report(metrics, ai_report, chart_buffer, filename=\"NW_Realite_Valuation_Report.pdf\"):\n",
     "    \"\"\"Generate professional PDF report\"\"\"\n",
-    "\n",
+    "    \n",
     "    doc = SimpleDocTemplate(\n",
     "        filename,\n",
     "        pagesize=A4,\n",
@@ -668,46 +680,60 @@
     "        leftMargin=0.75*inch,\n",
     "        rightMargin=0.75*inch,\n",
     "    )\n",
-    "\n",
+    "    \n",
     "    story = []\n",
     "    styles = getSampleStyleSheet()\n",
-    "\n",
-    "    # Custom Styles\n",
+    "    \n",
+    "    # ===== CUSTOM STYLES =====\n",
     "    title_style = ParagraphStyle(\n",
-    "        'CustomTitle', parent=styles['Title'],\n",
-    "        fontSize=24, textColor=colors.HexColor(\"#000000\"),\n",
-    "        spaceAfter=12, alignment=TA_CENTER\n",
+    "        'CustomTitle', \n",
+    "        parent=styles['Title'],\n",
+    "        fontSize=24, \n",
+    "        textColor=colors.HexColor(\"#000000\"),\n",
+    "        spaceAfter=12, \n",
+    "        alignment=TA_CENTER,\n",
+    "        fontName='Helvetica-Bold'\n",
     "    )\n",
-    "\n",
+    "    \n",
     "    heading_style = ParagraphStyle(\n",
-    "        'CustomHeading', parent=styles['Heading1'],\n",
-    "        fontSize=14, textColor=colors.HexColor(\"#000000\"),\n",
-    "        spaceAfter=10, spaceBefore=15, fontName='Helvetica-Bold'\n",
+    "        'CustomHeading', \n",
+    "        parent=styles['Heading1'],\n",
+    "        fontSize=14, \n",
+    "        textColor=colors.HexColor(\"#000000\"),\n",
+    "        spaceAfter=10, \n",
+    "        spaceBefore=15, \n",
+    "        fontName='Helvetica-Bold'\n",
     "    )\n",
-    "\n",
+    "    \n",
     "    subheading_style = ParagraphStyle(\n",
-    "        'CustomSubHeading', parent=styles['Heading2'],\n",
-    "        fontSize=12, textColor=colors.HexColor(\"#000000\"),\n",
-    "        spaceAfter=8, spaceBefore=10, fontName='Helvetica-Bold'\n",
+    "        'CustomSubHeading', \n",
+    "        parent=styles['Heading2'],\n",
+    "        fontSize=11, \n",
+    "        textColor=colors.HexColor(\"#000000\"),\n",
+    "        spaceAfter=6, \n",
+    "        spaceBefore=8, \n",
+    "        fontName='Helvetica-Bold'\n",
     "    )\n",
-    "\n",
+    "    \n",
     "    body_style = ParagraphStyle(\n",
-    "        'CustomBody', parent=styles['BodyText'],\n",
-    "        fontSize=10, leading=14, alignment=TA_LEFT,\n",
-    "        spaceAfter=10\n",
+    "        'CustomBody', \n",
+    "        parent=styles['BodyText'],\n",
+    "        fontSize=10, \n",
+    "        leading=14, \n",
+    "        alignment=TA_LEFT,\n",
+    "        spaceAfter=8\n",
     "    )\n",
-    "\n",
+    "    \n",
     "    # ===== TITLE PAGE =====\n",
     "    story.append(Paragraph(COMPANY_NAME, title_style))\n",
     "    story.append(Spacer(1, 0.2*inch))\n",
-    "    story.append(Paragraph(\"Property Valuation Analysis Report\", heading_style))\n",
-    "    story.append(Spacer(1, 0.1*inch))\n",
-    "    # story.append(Paragraph(f\"Report Date: {REPORT_DATE}\", body_style))\n",
-    "    story.append(Spacer(1, 0.3*inch))\n",
-    "\n",
+    "    # story.append(Paragraph(\"Property Valuation Analysis Report\", heading_style))\n",
+    "    story.append(Spacer(1, 0.4*inch))\n",
+    "    \n",
     "    # ===== KEY METRICS TABLE =====\n",
     "    story.append(Paragraph(\"Executive Summary - Key Metrics\", heading_style))\n",
-    "\n",
+    "    story.append(Spacer(1, 0.1*inch))\n",
+    "    \n",
     "    key_metrics_data = [\n",
     "        ['Metric', 'Value'],\n",
     "        ['Total Properties', f\"{metrics['portfolio']['total_properties']:,}\"],\n",
@@ -718,40 +744,72 @@
     "        ['MoM Growth (Properties)', f\"{metrics['temporal']['mom_growth_count']:.1f}%\"],\n",
     "        ['Avg Days to Valuation', f\"{metrics['temporal']['avg_days_to_valuation']:.1f} days\"],\n",
     "    ]\n",
-    "\n",
+    "    \n",
     "    key_metrics_table = Table(key_metrics_data, colWidths=[3.5*inch, 2.5*inch])\n",
     "    key_metrics_table.setStyle(TableStyle([\n",
-    "        ('BACKGROUND', (0, 0), (-1, 0), colors.HexColor(\"#0c0c0c\")),\n",
-    "        ('TEXTCOLOR', (0, 0), (-1, 0), colors.whitesmoke),\n",
+    "        # Header row styling\n",
+    "        ('BACKGROUND', (0, 0), (-1, 0), colors.HexColor(\"#000000\")),\n",
+    "        ('TEXTCOLOR', (0, 0), (-1, 0), colors.white),\n",
     "        ('ALIGN', (0, 0), (-1, -1), 'LEFT'),\n",
     "        ('FONTNAME', (0, 0), (-1, 0), 'Helvetica-Bold'),\n",
     "        ('FONTSIZE', (0, 0), (-1, 0), 11),\n",
     "        ('BOTTOMPADDING', (0, 0), (-1, 0), 12),\n",
-    "        ('BACKGROUND', (0, 1), (-1, -1), colors.beige),\n",
-    "        ('GRID', (0, 0), (-1, -1), 1, colors.grey),\n",
+    "        ('TOPPADDING', (0, 0), (-1, 0), 12),\n",
+    "        \n",
+    "        # Data rows styling - WHITE BACKGROUND\n",
+    "        ('BACKGROUND', (0, 1), (-1, -1), colors.white),\n",
+    "        ('TEXTCOLOR', (0, 1), (-1, -1), colors.black),\n",
     "        ('FONTSIZE', (0, 1), (-1, -1), 10),\n",
+    "        ('TOPPADDING', (0, 1), (-1, -1), 8),\n",
+    "        ('BOTTOMPADDING', (0, 1), (-1, -1), 8),\n",
+    "        \n",
+    "        # Grid and borders\n",
+    "        ('GRID', (0, 0), (-1, -1), 0.5, colors.grey),\n",
+    "        ('LINEBELOW', (0, 0), (-1, 0), 2, colors.black),\n",
     "    ]))\n",
-    "\n",
+    "    \n",
     "    story.append(key_metrics_table)\n",
     "    story.append(Spacer(1, 0.4*inch))\n",
-    "\n",
+    "    \n",
     "    # ===== AI-GENERATED REPORT TEXT =====\n",
-    "    story.append(Paragraph(\"Analysis & Insights\", heading_style))\n",
-    "    for paragraph in ai_report.split(\"\\n\"):\n",
-    "        if paragraph.strip():\n",
-    "            story.append(Paragraph(paragraph, body_style))\n",
-    "\n",
+    "    # story.append(Paragraph(\"Analysis & Insights\", heading_style))\n",
+    "    # story.append(Spacer(1, 0.1*inch))\n",
+    "    \n",
+    "    # Process the AI report text\n",
+    "    # Split by paragraphs and detect section headers\n",
+    "    lines = ai_report.split('\\n')\n",
+    "    \n",
+    "    for line in lines:\n",
+    "        line = line.strip()\n",
+    "        \n",
+    "        if not line:\n",
+    "            continue\n",
+    "            \n",
+    "        # Detect section headers (lines that start with numbers or are in ALL CAPS)\n",
+    "        if (line and (line[0].isdigit() and '.' in line[:3])) or line.isupper():\n",
+    "            # This is a section header\n",
+    "            story.append(Spacer(1, 0.15*inch))\n",
+    "            story.append(Paragraph(line, subheading_style))\n",
+    "        else:\n",
+    "            # Regular paragraph\n",
+    "            story.append(Paragraph(line, body_style))\n",
+    "    \n",
+    "    story.append(Spacer(1, 0.3*inch))\n",
+    "    \n",
     "    # ===== CHART IMAGE =====\n",
     "    story.append(Paragraph(\"Portfolio Trend Chart\", heading_style))\n",
-    "    story.append(Spacer(1, 0.1 * inch))\n",
-    "\n",
+    "    story.append(Spacer(1, 0.1*inch))\n",
+    "    \n",
     "    chart_buffer.seek(0)\n",
-    "    story.append(Image(chart_buffer, width=5.5 * inch, height=3.0 * inch))\n",
-    "\n",
+    "    story.append(Image(chart_buffer, width=6*inch, height=3.5*inch))\n",
+    "    \n",
     "    # ===== BUILD PDF =====\n",
     "    doc.build(story)\n",
-    "    print(f\"✓ PDF report created: {filename}\")\n",
-    "\n"
+    "    print(f\"✓ PDF report created successfully: {filename}\")\n",
+    "\n",
+    "\n",
+    "# Create the PDF report\n",
+    "create_pdf_report(metrics, ai_report, chart_buffer, filename=\"nw_realite_report.pdf\")"
    ]
   },
   {
